--- a/Login/Login.css
+++ b/Login/Login.css
@@ -33,6 +33,7 @@ body{
     
 }
 
+
 .logo{
   width: 50px;
   height: 50px;
@@ -69,8 +70,8 @@ body{
 .navgation .btnLogin-popup{
     width: 130px;
     height: 50px;
-    background: transparent;
-    border: 2px solid #ffffff;
+    background: rgb(68, 68, 68);
+    border: 2px solid rgb(68, 68, 68);
     outline: none;
     border-radius: 6px;
     cursor: pointer;
@@ -89,12 +90,9 @@ body{
 .wrapper{
     position: relative;
     width: 400px;
-    height: 440px;
-    background: transparent;
-    border: 2px solid rgba(0, 0, 0, .5);
-    border-radius: 20px;
-    backdrop-filter: blur(1px);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    height: 390px;
+    background: rgba(68, 68, 68, 0.6);
+    border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -145,9 +143,9 @@ body{
     right: 0;
     width: 45px;
     height: 45px;
-    background: #ffffff;
+    background: rgb(68, 68, 68);
     font-size: 2em;
-    color: #000000;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -227,7 +225,7 @@ body{
 }
 
 .remember-forgot a{
-    color: #4b2828;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -272,7 +270,7 @@ body{
 }
 
 .login-register p a{
-    color: #4b2828;
+    color: #000000;
     text-decoration: none;
     font-weight: 600;
 }
