--- a/Login/Login.css
+++ b/Login/Login.css
@@ -27,7 +27,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/img/FundoPage.svg') no-repeat;
+    background: url('/img/FundoPage.png') no-repeat;
     background-size: cover;
     background-position: center;
     
